SET(ALGORITHM_LIBS PARENT_SCOPE)
SET(ALGORITHM_DEFINES "" PARENT_SCOPE)

OPTION(USE_ARMOR "USE_ARMOR" ON)
IF(${USE_ARMOR})
ADD_SUBDIRECTORY(Armor)
SET(LIBS ${LIBS} ${ARMOR_LIBS})
SET(DEFINES "${DEFINES} ${ARMOR_DEFINES}")
ENDIF()

OPTION(USE_BOX "USE_BOX" OFF)
IF(${USE_BOX})
ADD_SUBDIRECTORY(Box)
SET(LIBS ${LIBS} ${BOX_LIBS})
SET(DEFINES "${DEFINES} ${BOX_DEFINES}")
ENDIF()

OPTION(USE_ENERGY "USE_ENERGY" OFF)
IF(${USE_ENERGY})
ADD_SUBDIRECTORY(Energy)
SET(LIBS ${LIBS} ${ENERGY_LIBS})
SET(DEFINES "${DEFINES} ${ENERGY_DEFINES}")
ENDIF()

SET(ALGORITHM_LIBS ${LIBS} PARENT_SCOPE)
SET(ALGORITHM_DEFINES ${DEFINES} PARENT_SCOPE)