OPTION(USE_ARMOR_TRT "USE_ARMOR_TRT" ON)
IF(${USE_ARMOR_TRT})
    ADD_SUBDIRECTORY(ArmorTRT)
    SET(ARMOR_LIBS ${ARMOR_TRT_LIBS} PARENT_SCOPE)
    SET(ARMOR_DEFINES "-DUSE_ARMOR ${ARMOR_TRT_DEFINES}" PARENT_SCOPE)
ELSE()
    ADD_SUBDIRECTORY(ArmorCV)
    SET(ARMOR_LIBS ${ARMOR_CV_LIBS} PARENT_SCOPE)
    SET(ARMOR_DEFINES "-DUSE_ARMOR ${ARMOR_CV_DEFINES}" PARENT_SCOPE)
ENDIF()