MESSAGE("use box")

FIND_PACKAGE(OpenCV 4 REQUIRED)
FIND_PACKAGE(Boost COMPONENTS timer REQUIRED)

FILE(GLOB_RECURSE boxfiles "*.cpp")
ADD_LIBRARY(box SHARED ${boxfiles})
TARGET_LINK_LIBRARIES(box ${OpenCV_LIBS})
TARGET_LINK_LIBRARIES(box ${Boost_LIBRARIES})

SET(BOX_LIBS box PARENT_SCOPE)
SET(BOX_DEFINES "-DUSE_BOX" PARENT_SCOPE)