MESSAGE("use armor-cv")

FIND_PACKAGE(OpenCV 4 REQUIRED)
FIND_PACKAGE(Boost COMPONENTS timer REQUIRED)

FILE(GLOB_RECURSE armorcvfiles "*.cpp")
ADD_LIBRARY(armor-cv SHARED ${armorcvfiles})
TARGET_LINK_LIBRARIES(armor-cv ${OpenCV_LIBS})
TARGET_LINK_LIBRARIES(armor-cv ${Boost_LIBRARIES})

SET(ARMOR_CV_LIBS armor-cv PARENT_SCOPE)
SET(BOX_DEFINES "-DUSE_ARMOR_CV" PARENT_SCOPE)